# Music_things

./: meson.build
file/: models.json
src/: DB_notes.hpp  basic_note.cpp  basic_note.hpp  beat.cpp  beat.hpp  clef.cpp  clef.hpp  main.cpp  meson.build  music_sheet .cpp  music_sheet.cpp  music_sheet.hpp  note.cpp  note.hpp  scale.cpp  scale.hpp  time.cpp  time.hpp
subprojects/: json.wrap
